kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: food-order-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: food-order

  template:
    metadata:
      labels:
        app: food-order

    spec:
      containers:
        - name: food-order-container
          image: raks25/food-order:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
