kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: food-order-ingress

spec:
  rules:
    - host: food.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: food-order-service

                port:
                  number: 80
